Made changes to the game/play screen. Still need to fix non breaking space problem on status causing misalignment and need to add values to progress bars"

--- a/app/assets/stylesheets/rooms.css.scss
+++ b/app/assets/stylesheets/rooms.css.scss
@@ -11,17 +11,46 @@
 h1.sf {
   font-size: 20em;
   color: black;
-   -webkit-text-fill-color: black; /* Will override color (regardless of order) */
+   -webkit-text-fill-color: white; /* Will override color (regardless of order) */
    -webkit-text-stroke-width: 6px;
-   -webkit-text-stroke-color: white;
+   -webkit-text-stroke-color: black;
 }
 
 h2.sf {
   font-size: 5em;
   color: black;
    -webkit-text-fill-color: black; /* Will override color (regardless of order) */
-   -webkit-text-stroke-width: 2px;
+   -webkit-text-stroke-width: 3px;
    -webkit-text-stroke-color: white;
+}
+h3.sf{  
+  font-size: 4em;
+  color: black;
+   -webkit-text-fill-color: white; /* Will override color (regardless of order) */
+   -webkit-text-stroke-width: 3px;
+   -webkit-text-stroke-color: black;
+}
+#name {
+  text-align: left;
+}
+.scoring{
+  display: table;
+  width: 100%;
+}
+.column{
+  display: table-cell;
+}
+#middle{
+  width: 10%;
+  text-align: center;
+}
+#left{
+  width: 42%;
+  margin-left: 3%;
+}
+#right{
+  margin-right: 3%;
+  width: 42%;
 }
 #room-id {
   visibility: hidden;
@@ -35,7 +64,24 @@ h2.sf {
   position: relative;
   top: 50%;
 }
+.progress{
+  align-content: center;
+  background: white;
+  border: 4px solid white;
+  height: 50px;
 
+}
+.meter{
+  height:100%;
+  width: 100%;
+  display: block;
+}
+#floatRight{
+  float: right;
+}
+#floatLeft{
+  float: left;
+}
 .meter.blue {
   background: cornflowerblue; }
 
@@ -52,5 +98,5 @@ h2.sf {
   background: #9b59b6; }
 
 body.rooms.game_new {
-  background: url("/images/app_backgrounds/Stage-Select-Background.png")
+  background: url("/images/app_backgrounds/Stage-Select-Background.png");
 }
